# Checkio

./: README.md  excersises.py  pyproject.toml  pytest.ini  test_lolo.py  to
.github/workflows/: ci.yml  pylint.yml
checkio/: excersises.py
tests/: pyproject.toml  test_lolo.py
tests/myenv/: pyvenv.cfg
tests/myenv/Scripts/: activate  activate.bat
