[tool.poetry]
name = "checkio"
version = "0.1.0"
description = "Poetry project"
authors = ["Daniel Wolff <daniel.wolff.etu@univ-lille.fr>"]
license = "MIT"  # or another license if applicable
readme = "README.md"  # If you have a README file
homepage = "https://your-project-homepage.com"  # If applicable
repository = "https://github.com/WWWolff/Poetry"  # If applicable
keywords = ["keyword1", "keyword2"]  # Optional keywords
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
